# agentic_unitree_go2

./: .gitignore  README.md  cli.py  go2_mcp_server.py  pyproject.toml  requirements.txt  tts_tools.py
agentic_unitree_go2/: __init__.py  __main__.py  connection.py
agentic_unitree_go2/apps/: mcp_server.py  tui.py
agentic_unitree_go2/llm/: __init__.py
agentic_unitree_go2/media/: __init__.py
agentic_unitree_go2/robot/: __init__.py  mock.py  safety.py
tests/: test_mock.py  test_safety.py
